# moai-dev

./: .gitignore
ant/: make-host.sh
ant/libmoai/: build.sh
cmake/: .gitignore  CMakeLists.txt
cmake/host-android/: android.toolchain.cmake
cmake/host-ios/: CMakeLists.txt
cmake/host-modules/: CMakeLists.txt
cmake/host-osx/: CMakeLists.txt
cmake/host-sdl/: CMakeLists.txt
cmake/host-test/: CMakeLists.txt
cmake/moai-box2d/: CMakeLists.txt
cmake/moai-bullet/: CMakeLists.txt
cmake/moai-iphone/: CMakeLists.txt
cmake/moai-iphone/chartboost/: CMakeLists.txt
cmake/moai-sim/: CMakeLists.txt
notes/: andoird.txt  github.txt.txt  ubuntu_notes.txt  upload_video.txt
plugins/moai-bullet/: CMakeLists.txt  plugin.CMake
plugins/moai-bullet/moai-bullet/: MOAIBulletFBO.cpp  MOAIBulletFBO.h  MOAILayerPass.cpp  MOAILayerPass.h  gbuffer.cpp  gbuffer.h
plugins/moai-chipmunk7/: CMakeLists.txt  README.md  plugin.CMake
plugins/moai-chipmunk7/chipmunk7/: CMakeLists.txt
plugins/moai-chipmunk7/cmake/chipmunk7/: CMakeLists.txt
plugins/moai-chipmunk7/cmake/moai-chipmunk7/: CMakeLists.txt
plugins/moai-chipmunk7/moai-chipmunk7/: MOAICp.cpp  MOAICp.h  MOAICpArbiter.cpp  MOAICpArbiter.h  MOAICpBody.cpp  MOAICpBody.h  MOAICpConstraint.cpp  MOAICpConstraint.h  MOAICpDebugDraw.cpp  MOAICpDebugDraw.h  MOAICpShape.cpp  MOAICpShape.h  MOAICpSpace.cpp  MOAICpSpace.h  headers.h  host.cpp  host.h
plugins/moai-ezra/: CMakeLists.txt  plugin.CMake
plugins/moai-ezra/cmake/ez3rd/: CMakeLists.txt
plugins/moai-ezra/cmake/moai-ezra/: CMakeLists.txt
plugins/moai-ezra/moai-ezra/: headers.h  host.cpp  host.h
plugins/moai-math/: CMakeLists.txt  plugin.CMake
plugins/moai-math/cmake/math-neon/: CMakeLists.txt
plugins/moai-math/cmake/moai-math/: CMakeLists.txt
plugins/moai-math/math-neon/: math_acosf.c  math_asinf.c  math_atan2f.c  math_atanf.c  math_ceilf.c  math_cosf.c  math_coshf.c  math_expf.c  math_fabsf.c  math_floorf.c  math_fmodf.c  math_invsqrtf.c  math_ldexpf.c  math_log10f.c  math_logf.c  math_modf.c  math_neon.h  math_powf.c  math_sinf.c  math_sinhf.c  math_sqrtf.c  math_sqrtfv.c  math_tanf.c  math_tanhf.c  math_vec2.c  math_vec3.c  math_vec4.c
plugins/moai-math/moai-math/: MOAIMathNeon.cpp  MOAIMathNeon.h  headers.h  host.cpp  host.h
plugins/moai-mathUtil/: CMakeLists.txt  README.md  plugin.CMake
plugins/moai-mathUtil/cmake/moai-mathUtil/: CMakeLists.txt
plugins/moai-mathUtil/cmake/moai-poly2tri/: CMakeLists.txt
plugins/moai-mathUtil/moai-mathUtil/: MOAIHit.h  MOAILight.cpp  MOAILight.h  MOAIMathNeon.cpp  MOAIMathNeon.h  MOAIMathUtil.cpp  MOAIMathUtil.h  MOAIPolygon.cpp  MOAIPolygon.h  headers.h  host.cpp  host.h  point.cpp  point.h
plugins/moai-mathUtil/moai-poly2tri/: poly2tri.h
plugins/moai-steam/: CMakeLists.txt  README.md  plugin.CMake
plugins/moai-steam/cmake/moai-steam/: CMakeLists.txt
plugins/moai-steam/cmake/steam/: CMakeLists.txt
plugins/moai-steam/moai-steam/: MOAISteamApi.cpp  MOAISteamApi.h  headers.h  host.cpp  host.h
plugins/moai-voxel/: CMakeLists.txt  plugin.CMake
plugins/moai-voxel/cmake/cubi/: CMakeLists.txt
plugins/moai-voxel/cmake/moai-voxel/: CMakeLists.txt
plugins/moai-voxel/cmake/voxel/: CMakeLists.txt
plugins/moai-voxel/cubi/: SQLiteUtils.h  Volume.h  VoxelDatabase.cpp  VoxelDatabase.h
plugins/moai-voxel/moai-voxel/: MOAIVoxelApi.cpp  MOAIVoxelApi.h  MOAIVoxelLayer.cpp  MOAIVoxelLayer.h  MOAIVoxelMesh.cpp  MOAIVoxelMesh.h  MOAIVoxelProp.cpp  MOAIVoxelProp.h  headers.h  host.cpp  host.h
samples/: bullet.rar
samples/3d-broken/: main.lua  run_main.lua.sh
samples/bullet/: main.lua  run_main.lua.sh  square.lua
samples/compass/: run.sh  run_main.lua.sh
samples/config/: run_config.lua.sh
samples/hello-moai/: run.sh
samples/joysitck/: main.lua  run_main.lua.sh  run_run_main.lua.sh.sh
samples/lighting/: run_sphere.lua.sh  sphere.lua
src/host-modules/: aku_modules.cpp  aku_modules.h  aku_modules_config.h
src/host-sdl/: SDLHost.cpp  SDLHost.h  SDLHostMain.cpp
src/lua-headers/: --moai_lua.h  moai.lua  moai_lua.h  run_main.lua.sh
src/moai-box2d/: MOAIBox2DBody.cpp  MOAIBox2DBody.h  MOAIBox2DDebugDraw.cpp  MOAIBox2DWorld.cpp  MOAIBox2DWorld.h
src/moai-bullet/: MOAIBulletBody.cpp  MOAIBulletBody.h  MOAIBulletDebugDraw.cpp  MOAIBulletDebugDraw.h  MOAIBulletJoint.cpp  MOAIBulletJoint.h  MOAIBulletJointCone.cpp  MOAIBulletJointFixed.cpp  MOAIBulletJointFreedom.cpp  MOAIBulletJointHinge.cpp  MOAIBulletJointPoint.cpp  MOAIBulletJointSlide.cpp  MOAIBulletShape.cpp  MOAIBulletShape.h  MOAIBulletTransform.cpp  MOAIBulletTransform.h  MOAIBulletWheel.cpp  MOAIBulletWorld.cpp  MOAIBulletWorld.h  headers.h  host.cpp  host.h
src/moai-core/: MOAILuaRuntime.cpp  MOAILuaState.cpp  host.cpp
src/moai-ios-chartboost/: MOAIChartBoostIOS.mm
src/moai-iphone/: AKU-chartboost.h  AKU-iphone.mm  MOAIChartBoostIOS.h  MOAIChartBoostIOS.mm  moaiext-iphone.h
src/moai-sim/: MOAIBlendMode.cpp  MOAIBox.cpp  MOAIBox.h  MOAICamera.cpp  MOAICamera.h  MOAICameraFitter2D.cpp  MOAIDeck.cpp  MOAIDeck.h  MOAIDeckRemapper.cpp  MOAIDraw.cpp  MOAIDraw.h  MOAIEnvironment.cpp  MOAIEzraTask.cpp  MOAIEzraTask.h  MOAIFrameBuffer.cpp  MOAIFrameBuffer.h  MOAIFrameBufferTexture.cpp  MOAIGameAnalogSensor.cpp  MOAIGameAnalogSensor.h  MOAIGameButtonSensor.cpp  MOAIGameButtonSensor.h  MOAIGfxDevice.cpp  MOAIGfxDevice.h  MOAIGrid.cpp  MOAIGrid.h  MOAIGridFancy.cpp  MOAIGridSpace.cpp  MOAIIndexBuffer.cpp  MOAIIndexBuffer.h  MOAIInputDevice.cpp  MOAIInputMgr.cpp  MOAIInputMgr.h  MOAIKeyboardSensor.cpp  MOAILayer.cpp  MOAILayer.h  MOAIMesh.cpp  MOAIMesh.h  MOAIParticlePexPlugin.cpp  MOAIPartition.cpp  MOAIPartitionCell.cpp  (+25 more)
src/moai-util/: MOAITask.cpp  MOAITaskQueue.cpp  MOAITaskThread.cpp  MOAITaskThread.h  MOAIThread.cpp  MOAIXmlParser.cpp
src/zl-gfx/: headers.h  zl_gfx_dummy.cpp  zl_gfx_opengl.cpp
src/zl-util/: ZLAffine3D.h  ZLByteStream.cpp  ZLByteStream.h  ZLFrustum.cpp  ZLLog.cpp
src/zl-vfs/: ZLVfsFileSystem.cpp  headers.cpp  zl_replace_stdlib.h
updater/lua/: debug_fps.lua  main.lua  run.sh  system_update.lua
workspace/: .gitignore
(+571 files in other folders)
